<resources>
    <string name="app_name">Exonimals</string>
    <string name="my_name">Bayu Nugroho</string>
    <string name="email">bayun2445@gmail.com</string>
    <string name="animal_name">AnimalName</string>
    <string name="origin">Origin</string>
    <string name="latin_name"><b>Species:</b> %1$s</string>
    <string name="diet"><b>Diet:</b> %1$s</string>
    <string name="habitat"><b>Habitat:</b> %1$s</string>
    <string name="class_text"><b>Class:</b> %1$s</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas lobortis felis vitae ultricies pharetra. Praesent rhoncus dapibus pharetra. Etiam finibus justo sed consequat ullamcorper. Fusce lobortis orci eu vulputate porta. Maecenas id molestie eros, congue dictum nisl. Praesent volutpat ornare nulla, eu tincidunt urna aliquam nec. Proin mattis ut odio sit amet pulvinar. Morbi egestas consequat velit id consectetur. Vivamus scelerisque ipsum eu luctus feugiat.</string>
    <string name="add_to_favorite">Favorite</string>
    <string name="no_favorite">No animal(s) in Favorite…</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="exit_title">Exit Exonimals</string>
    <string name="exit_message">Are you sure to exit?</string>
    <string name="exit_positive">Yes</string>
    <string name="exit_negative">No</string>
    <string name="top_most_exotic_animals">Top Most Exotic Animals</string>
</resources>