<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_detail_animal"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/kukang"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        android:layout_below="@id/img_detail_animal">

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/animal_name"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/tv_detail_latin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:text="@string/latin_name" />

        <TextView
            android:id="@+id/tv_detail_habitat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/habitat"/>

        <TextView
            android:id="@+id/tv_detail_diet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diet"/>

        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:justificationMode="inter_word"
            android:text="@string/description" />
    </LinearLayout>
</RelativeLayout>